--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ ul li{
     color: red;
 }
 main{
-    height: 100vh;
+margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
